javac command line in README